--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,2 @@
 github: [Vets-Who-Code]
-custom: ["https://github.com/sponsors/Vets-Who-Code"]
+custom: ["https://vetswhocode.io/donate", "https://smile.amazon.com/ch/86-2122804"]
